# Brain-games

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
brain_games/: cli.py  engine.py  evengame_logic.py  game_engine.py
brain_games/games/: calc.py  calc_logic.py  calcgame_logic.py  even.py  even_logic.py  gcd.py  gcd_logic.py  prime.py  prime_logic.py  progression.py  progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
oleglego94_brain_games.egg-info/: PKG-INFO  SOURCES.txt
