[tool.poetry]
name = "oleglego94_brain_games"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.5"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

