[tool.poetry]
name = "oleglego94_brain_games"
version = "0.2.0"
description = ""
authors = ["Oleg Gahverdiev <olegik94b@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

